<resources>
    <string name="app_name">ActividadEvaluativaT7</string>
    <string name="imagen_avatar">Imagen Avatar</string>
    <string name="buscar_contacto">Buscar Contacto</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre_contacto">Nombre Contacto</string>
    <string name="avatar">Avatar:</string>
    <string name="telefono">Teléfono:</string>
    <string name="telefono_contacto">Telefono Contacto</string>
    <string name="a_adir">AÑADIR</string>
    <string name="modificar">MODIFICAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="borrar">BORRAR</string>
</resources>